<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/empty_view_id"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:contentDescription="@string/image_for_no_transaction"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/noentryimage" />

    <TextView
        android:id="@+id/noTransactionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/no_transaction_yet"
        android:layout_marginTop="@dimen/dimen_eight"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/twenty_four_sp_text_size"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/noTransactionTextSecondTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/sixteen_sp_text_size"
        android:layout_marginTop="@dimen/dimen_eight"
        android:layout_marginStart="@dimen/dimen_eight"
        android:layout_marginEnd="@dimen/dimen_eight"
        android:text="@string/add_a_new_transaction_to_get_started"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/noTransactionTv"
        app:layout_constraintStart_toStartOf="@id/noTransactionTv"
        app:layout_constraintEnd_toEndOf="@id/noTransactionTv"/>

</androidx.constraintlayout.widget.ConstraintLayout>